<resources>
    <string name="app_name">Hotel healthy</string>
    <string name="remoman">0</string>
    <string name="jit">สุขภาพจิต</string>
    <string name="ten">10 วิธี สร้างสุข ในการทำงาน</string>
    <string name="quot_quot">ทำงานเป็นสุขด้วย \"สติ-สมาธิ\"</string>
    <string name="pan">ภาวะซึมเศร้า ปัญหาสุขภาพจิตจากการทำงาน</string>
    <string name="kai">ไขปัญหาสุขภาพจิตกับอาการนอนไม่หลับ</string>
    <string name="kid">เคล็ดลับในการดูแลตัวเอง</string>
    <string name="yanglay">จังหวัดเชียงราย</string>
    <string name="_0_5391_0999">โทร. 0 5391 0999</string>
    <string name="payapan">- โรงพยาบาลเกษมราษฏร์ ศรีบุรินทร์</string>
    <string name="payapan1">- โรงพยาบาลเชียงรายประชานุเคราะห์</string>
    <string name="_0_5391_0600">โทร. 0 5391 0600</string>
    <string name="_0_5391_7563">โทร. 0 5391 7563</string>
    <string name="payapan2">- โรงพยาบาลแม่ลาว</string>
    <string name="payapan3">- โรงพยาบาลแม่ฟ้าหลวง</string>
    <string name="_0_5360_3100">โทร. 0 5360 3100</string>
    <string name="payapan4">- โรงพยาบาลสมเด็จพระญาณสังวร</string>
    <string name="payapan5">- โรงพยาบาลเซ็นทรัลเชียงใหม่เมโมเรียล</string>
    <string name="payapan6">- โรงพยาบาลโอเวอร์บรุ๊ค</string>
    <string name="payapan7">จังหวัดเชียงใหม่</string>
    <string name="_0_5371_1366">โทร. 0 5371 1366</string>
    <string name="payapan8">- โรงพยาบาลแม่ออน</string>
    <string name="payapan9">- โรงพยาบาลค่ายเม็งรายมหาราช</string>
    <string name="_0_5371_7649">โทร. 0 5371 7649</string>
    <string name="_0_5360_3123">โทร. 0 5360 3123</string>
    <string name="_0_5381_9333_40">โทร.0 5381 9333-40</string>
    <string name="_0_5388_0745_6">โทร. 0 5388 0745-6</string>
    <string name="payapan10">- โรงพยาบาลไชยปราการ</string>
    <string name="_0_5387_0584_6">โทร. 0 5387 0584-6</string>
    <string name="payapan11">- โรงพยาบาลแม่แตง</string>
    <string name="_0_5347_1478">โทร. 0 5347 1478</string>
    <string name="payapan12">- โรงพยาบาลช้างเผือก</string>
    <string name="_0_5322_0022">โทร. 0 5322 0022</string>
    <string name="payapan13">- โรงพยาบาลแม่วาง</string>
    <string name="_0_5336_3438">โทร. 0 5336 3438</string>
    <string name="payapan14">- โรงพยาบาลเชียงดาว</string>
    <string name="_0_5345_5074">โทร. 0 5345 5074</string>
    <string name="payapan15">- โรงพยาบาลมหาราชนครเชียงใหม่</string>
    <string name="_0_5322_1122">โทร. 0 5322 1122</string>
    <string name="payapan16">- โรงพยาบาลโรคฟันเชียงใหม่</string>
    <string name="_0_5341_1150_1">โทร. 0 5341 1150-1</string>
    <string name="payapan17">- โรงพยาบาลแม่อาย</string>
    <string name="_0_5345_9036">โทร. 0 5345 9036</string>
    <string name="payapan19">- โรงพยาบาลนครพิงค์</string>
    <string name="payapan20">- โรงพยาบาลเชียงใหม่ ราม</string>
    <string name="payapan21">- โรงพยาบาลประสาทเชียงใหม่</string>
    <string name="_0_5321_7704">โทร. 0 5321 7704</string>
    <string name="_0_5392_0300">โทร. 0 5392 0300</string>
    <string name="_0_5399_9200">โทร. 0 5399 9200</string>
    <string name="_2">- โรงพยาบาลเชียงใหม่ ราม 2</string>
    <string name="_0_5385_2590">โทร. 0 5385 2590</string>
    <string name="payapan22">- โรงพยาบาลอมก๋อย</string>
    <string name="_0_5346_7068">โทร. 0 5346 7068</string>
    <string name="payapan23">- โรงพยาบาลจินดาสิงหเนตร</string>
    <string name="_0_5324_1712">โทร. 0 5324 1712</string>
    <string name="payapan24">- โรงพยาบาลพร้าว</string>
    <string name="_0_5347_5271">โทร. 0 5347 5271</string>
    <string name="payapan25">- โรงพยาบาลดารารัศมี</string>
    <string name="payapan26">- โรงพยาบาลดอยสะเก็ด</string>
    <string name="_0_5329_7207">โทร. 0 5329 7207</string>
    <string name="payapan27">- โรงพยาบาลราชเวช เชียงใหม่</string>
    <string name="_0_5380_1999">โทร. 0 5380 1999</string>
    <string name="payapan29">- โรงพยาบาลรวมแพทย์เชียงใหม่</string>
    <string name="_0_5349_5571">โทร. 0 5349 5571</string>
    <string name="_0_5327_0144">โทร. 0 5327 0144</string>
    <string name="_0_5348_7124">โทร. 0 5348 7124</string>
    <string name="_0_5346_9018">โทร. 0 5346 9018</string>
    <string name="payapan30">- โรงพยาบาลดอยเต่า</string>
    <string name="payapan31">- โรงพยาบาลสะเมิง</string>
    <string name="payapan32">- โรงพยาบาลหมอวงค์</string>
    <string name="_0_5324_9559">โทร. 0 5324 9559</string>
    <string name="payapan33">- โรงพยาบาลสันป่าตอง</string>
    <string name="_0_5335_5338">โทร. 0 5335 5338</string>
    <string name="payapan34">- โรงพยาบาลฝาง</string>
    <string name="_0_5345_1444">โทร. 0 5345 1444</string>
    <string name="payapan35">- โรงพยาบาลสันทราย</string>
    <string name="_0_5349_8996">โทร. 0 5349 8996</string>
    <string name="payapan36">- โรงพยาบาลหางดงี</string>
    <string name="_0_5344_2390">โทร. 0 5344 2390</string>
    <string name="payapan38">- โรงพยาบาลสารภี</string>
    <string name="_0_5332_1179">โทร. 0 5332 1179</string>
    <string name="payapan39">- โรงพยาบาลฮอด</string>
    <string name="_0_5346_1095">โทร. 0 5346 1095</string>
    <string name="payapan40">- โรงพยาบาลตาเซนต์ปีเตอร์</string>
    <string name="_0_5322_5011_5">โทร. 0 5322 5011-5</string>
    <string name="payapan41">- โรงพยาบาลสวนปรุง</string>
    <string name="_0_5399_9777">โทร. 0 5399 9777</string>
    <string name="_0_53_984325">โทร. 0 53-984325</string>
    <string name="_054_237_400">โทร. 054 237 400</string>
    <string name="payapan42">- โรงพยาบาลสบปราบ</string>
    <string name="_054_019_619">โทร. 054 019 619</string>
    <string name="_054_266_032">โทร. 054 266 032</string>
    <string name="_0_5328_0228_46">โทร. 0 5328 0228-46</string>
    <string name="payapan44">- โรงพยาบาลลานนา เชียงใหม่</string>
    <string name="_053_976000">โทร. 053-976000</string>
    <string name="payapan45">- โรงพยาบาลทุ่งหัวช้าง</string>
    <string name="payapan46">จังหวัดลำปาง</string>
    <string name="_055_296_260">โทร. 055 296 260</string>
    <string name="payapan47">- โรงพยาบาลแม่ทะ</string>
    <string name="_054_268_700">โทร. 054 268 700</string>
    <string name="payapan49">- โรงพยาบาลเสริมงาม</string>
    <string name="_054_286_117">โทร. 054 286 117</string>
    <string name="payapan50">- โรงพยาบาลเขลางศ์นคร-ราม</string>
    <string name="payapan51">- โรงพยาบาลเถิน</string>
    <string name="_054_291_585">โทร. 054 291 585</string>
    <string name="payapan52">- โรงพยาบาลแม่เมาะ</string>
    <string name="payapan53">- โรงพยาบาลห้างฉัตร</string>
    <string name="payapan54">- โรงพยาบาลงาว</string>
    <string name="payapan55">- โรงพยาบาลลำปาง</string>
    <string name="_054_411_111">โทร. 054 411 111</string>
    <string name="_054_495_300">โทร. 054 495 300</string>
    <string name="payapan56">- โรงพยาบาลพะเยา ราม</string>
    <string name="payapan57">- โรงพยาบาลแม่แจ่ม</string>
    <string name="_0_5348_5073">โทร. 0 5348 5073</string>
    <string name="payapan58">- โรงพยาบาลเวียงแหง</string>
    <string name="payapan59">จังหวัดลำพูน</string>
    <string name="_053_555400">โทร. 053-555400</string>
    <string name="_054_409_300">โทร. 054 409 300</string>
    <string name="payapan60">- โรงพยาบาลป่าซาง</string>
    <string name="payapan61">- โรงพยาบาล ลำพูน</string>
    <string name="_0_5347_7011_12">โทร. 0 5347 7011-12</string>
    <string name="_053_975201">โทร. 053-975201</string>
    <string name="payapan62">- โรงพยาบาล ศิริเวชลำพูน</string>
    <string name="payapan63">- โรงพยาบาลเชียงม่วน</string>
    <string name="_054_409_000">โทร. 054-409 000</string>
    <string name="payapan65">- โรงพยาบาลแม่ใจ</string>
    <string name="payapan66">- โรงพยาบาลเชียงคำ</string>
    <string name="payapan67">- โรงพยาบาลแม่ทา</string>
    <string name="_053_512072">โทร. 053-512072</string>
    <string name="payapan68">- โรงพยาบาลบ้านธิ</string>
    <string name="_053_096_440">โทร. 053 096 440</string>
    <string name="payapan69">จังหวัดพะเยา</string>
    <string name="payapan70">- โรงพยาบาลพะเยา</string>
    <string name="_054_409_600">โทร. 054 409 600</string>
    <string name="_054_261_253">โทร. 054 261 253</string>
    <string name="_054_289_184">โทร. 054 289 184</string>
    <string name="payapan71">- โรงพยาบาลค่ายสุรศักดิ์มนตรี</string>
    <string name="_054_839_305">โทร. 054 839 305</string>
    <string name="pat">การแพทย์ สาธารณสุข</string>
    <string name="pat1">- ศูนย์พิษวิทยา โรงพยาบาลรามาธิบดี</string>
    <string name="_02_251_0385">โทร. 02-251-0385</string>
    <string name="pat2">- สายด่วนกรมสุขภาพจิต</string>
    <string name="pat3">- กู้ภัยจอมจันทร์</string>
    <string name="_053_723265">โทร. 053-723265</string>
    <string name="pat4">- กู้ภัยทัพยั้ง</string>
    <string name="_089_4313006">โทร. 089 4313006</string>
    <string name="pat5">สำนักงานการท่องเที่ยว</string>
    <string name="_1672">โทร. 1672</string>
    <string name="_0_5378_3445">โทร. 0 5378 3445</string>
    <string name="pat6">- สถานีตำรวจภูธรดอยหลวง</string>
    <string name="pat7">- สถานีตำรวจภูธรแม่จัน</string>
    <string name="_0_5371_1588">โทร. 0 5371 1588</string>
    <string name="pat8">- ศูนย์ดับเพลิงเชียงใหม่</string>
    <string name="_0_5324_8604">โทร. 0 5324 8604</string>
    <string name="_0_5333_2452">โทร. 0 5333 2452</string>
    <string name="_0_5332_1090">โทร. 0 5332 1090</string>
    <string name="_0_5392_8028">โทร. 0 5392 8028</string>
    <string name="pat9">- สถานีตำรวจแม่เวียง</string>
    <string name="_0_5348_7090">โทร. 0 5348 7090</string>
    <string name="pat10">- สถานีตำรวจสะเมิง</string>
    <string name="_0_5327_5715">โทร. 0 5327 5715</string>
    <string name="pat11">- สถานีตำรวจแม่ปิง</string>
    <string name="_0_5349_1949">โทร. 0 5349 1949</string>
    <string name="pat12">- สถานีตำรวจสันทราย</string>
    <string name="_0_5327_7510">โทร. 0 5327 7510</string>
    <string name="_0_5321_9230">โทร. 0 5321 9230</string>
    <string name="pat13">- สถานีตำรวจทางหลวง</string>
    <string name="_1165">โทร. 1165</string>
    <string name="pat14">- สำนักงานอาสากาชาด สภากาชาดไทย</string>
    <string name="pat15">- มูลนิธิเมืองพานสงเคราะห์</string>
    <string name="_080_722_5660">โทร. 080 722 5660</string>
    <string name="pat16">- สถานีตำรวจภูธรแม่เจดีย์</string>
    <string name="pat17">- สถานีตำรวจภูธรพญาเม็งราย</string>
    <string name="_0_5379_4405">โทร. 0 5379 4405</string>
    <string name="pat18">จังหวัดเชียงใหม่</string>
    <string name="pat19">- ตำรวจท่องเที่ยวเมืองเชียงใหม่</string>
    <string name="_0_5331_1123">โทร. 0 5331 1123</string>
    <string name="pat20">- สถานีตำรวจสันป่าตอง</string>
    <string name="_0_5324_0289">โทร. 0 5324 0289</string>
    <string name="pat21">- สถานีตำรวจสารภี</string>
    <string name="pat22">- สถานีตำรวจสันกำแพง</string>
    <string name="_0_5327_7477">โทร. 0 5327 7477</string>
    <string name="pat23">- สถานีตำรวจเมืองเชียงใหม่</string>
    <string name="pat24">- สถานีตำรวจภูพิงค์</string>
    <string name="_0_5321_8445">โทร. 0 5321 8445</string>
    <string name="pat25">- สถานีตำรวจช้างเผือก</string>
    <string name="_0_5347_5309">โทร. 0 5347 5309</string>
    <string name="pat26">- สถานีตำรวจพร้าว</string>
    <string name="_0_5323_4051">โทร. 0 5323 4051</string>
    <string name="pat27">- การท่องเที่ยวแห่งประเทศไทย (ททท.) สำนักงานเชียงใหม่</string>
    <string name="pat28">- ศูนย์การจราจรตำรวจภูธร</string>
    <string name="_0_5327_0222_2191">โทร. 0 5327 0222 ต่อ 2191</string>
    <string name="_0_5345_9033">โทร. 0 5345 9033</string>
    <string name="pat29">- สถานีตำรวจภูธรเวียงแก่น</string>
    <string name="_0_5395_3155">โทร. 0 5395 3155</string>
    <string name="_0_5323_3479">โทร. 0 5323 3479</string>
    <string name="pat30">- ตำรวจท่องเที่ยวท่าตอน</string>
    <string name="_0_5324_7318">โทร. 0 5324 7318</string>
    <string name="pat31">- สถานีตำรวจท่องเที่ยวแอร์พอร์ต</string>
    <string name="pat32">- ประปาเชียงใหม่</string>
    <string name="_0_5327_0222">โทร. 0 5327 0222</string>
    <string name="pat33">- การ์ดแอร์ เซอร์วิสเซส สาขาเชียงใหม่</string>
    <string name="_0_5378_1466">โทร. 0 5378 1466</string>
    <string name="pat34">- สถานีตำรวจภูธรเวียงป่าเป้า</string>
</resources>