<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgmaid"
    tools:context=".mind">

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kid"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.254" />

    <Button
        android:id="@+id/btnbackmind"
        android:layout_width="70dp"
        android:layout_height="38dp"
        android:background="@drawable/iconback"
        android:onClick="clickback"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061" />

    <Button
        android:id="@+id/btnbacnkhomemind"
        android:layout_width="70dp"
        android:layout_height="38dp"
        android:background="@drawable/iconbdg"
        android:onClick="clickhome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.865"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.76">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtwew1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/jit"
                android:textColor="#0E0D0D"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginStart="10dp" />

            <TextView
                android:id="@+id/txtwew2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:onClick="clickmaid"
                android:text="@string/ten"
                android:textColor="#0E0D0D"
                android:textSize="20sp"
                android:layout_marginStart="16dp" />

            <TextView
                android:id="@+id/txtwew3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:onClick="clickmaid2"
                android:text="@string/quot_quot"
                android:textColor="#0E0D0D"
                android:textSize="20sp"
                android:layout_marginStart="16dp" />

            <TextView
                android:id="@+id/txtwew4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:onClick="clickmaid3"
                android:text="@string/pan"
                android:textColor="#0E0D0D"
                android:textSize="20sp"
                android:layout_marginStart="16dp" />

            <TextView
                android:id="@+id/txtwew5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:onClick="clickmaid4"
                android:text="@string/kai"
                android:textColor="#0E0D0D"
                android:textSize="20sp"
                android:layout_marginStart="16dp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>